--- a/index.html
+++ b/index.html
@@ -150,21 +150,9 @@
         <!-- SLIDE START -->
         <section class="slide">
             <div class="slide-content">
-                <input type="radio" name="btn-radio" id="radio1">
-                <input type="radio" name="btn-radio" id="radio2">
-
                 <div class="slide-box first">
-                    <img class="img-desktop" src="assets/img/slide/slide1.png" alt="slide 1">
-                    <img class="img-mobile" src="assets/img/slide/slide1mobile.png" alt="slide 1">
-                </div>
-                <div class="slide-box">
-                    <img class="img-desktop" src="assets/img/slide/slide2.png" alt="slide 2">
-                    <img class="img-mobile" src="assets/img/slide/slide2mobile.png" alt="slide 2">
-                </div>
-
-                <div class="nav-auto">
-                    <div class="auto-btn1"></div>
-                    <div class="auto-btn2"></div>
+                    <img class="img-desktop" src="assets/img/index/hero-bg01.png" alt="slide 1">
+                    <img class="img-mobile" src="assets/img/index/hero-bg01.png" alt="slide 1">
                 </div>
             </div>
         </section>
@@ -488,7 +476,7 @@
                     <div class="row mt-none-30">
                         <div class="col-lg-8 mt-30"> 
                             <div class="sec-title sec-title--four mb-80 pr-140">
-                                <span class="sub-title">faq</span>
+                                <span class="sub-title">Infraestrutura</span>
                                 <h2 class="title pl-50"><span>compromisso</span> sustentável e <span>tecnológico</span>  <span> </span> </h2>
                             </div>
                             <div class="xb-faq sec-pl_200">
@@ -510,13 +498,13 @@
                                             </div>
                                         </div>
                                     </li>
-                                    <li class="accordion block active-block">
+                                    <li class="accordion block">
                                         <div class="acc-btn">
                                             <span class="number">02</span>
                                             <h3 class="title">TECNOLOGIA DE PONTA</h3>
                                             <span class="arrow"></span>
                                         </div>
-                                        <div class="acc_body current">
+                                        <div class="acc_body">
                                             <div class="content ul_li_between">
                                                 <p>Investimos nas mais modernas tecnologias de impressão que garantem máxima qualidade com menor consumo de energia e recursos. 
                                                 <a href="#!" class="more-btn">saiba mais</a>
@@ -604,7 +592,7 @@
                                     Nascemos com um propósito claro: unir inovação e sustentabilidade. Nossa gráfica combina tecnologia de ponta com práticas ecologicamente responsáveis.
                                 </div>
                                 <div class="xb-img mt-100">
-                                    <img class="wow skewIn" data-wow-duration="600ms" src="assets/img/faq/faq-img02.jpg" alt="">
+                                    <img class="wow skewIn" data-wow-duration="600ms" src="assets/img/index/infra/infra-banner.png" alt="">
                                 </div>
                             </div>
                         </div>
